ex6 done and tested